# Voice

catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
catkin_ws/devel/include/beginner_tutorials/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h
catkin_ws/devel/lib/beginner_tutorials/: add_two_ints_client  add_two_ints_server
catkin_ws/devel/lib/pkgconfig/: beginner_tutorials.pc  learning_tf.pc  numpy_tutorial.pc
catkin_ws/devel/lib/python2.7/dist-packages/beginner_tutorials/msg/: _Num.py
catkin_ws/devel/share/beginner_tutorials/cmake/: beginner_tutorials-msg-paths.cmake  beginner_tutorialsConfig.cmake
catkin_ws/devel/share/common-lisp/ros/beginner_tutorials/msg/: Num.lisp  _package_Num.lisp
catkin_ws/devel/share/learning_tf/cmake/: learning_tfConfig.cmake
catkin_ws/devel/share/numpy_tutorial/cmake/: numpy_tutorialConfig.cmake
catkin_ws/src/beginner_tutorials/: CMakeLists.txt  CO JESZCZE  How
catkin_ws/src/beginner_tutorials/launch/: start_demo.launch  start_demo.launch~
catkin_ws/src/beginner_tutorials/scripts/: .talker.py.swp  GetIntentViaSpeech.py  Num.msg  abc.py  dodawanieZdan.py  listener.py  nagrywaj.py  ruchy_zolwia.py  talker.py  talker2_bezwitaia.py  talkerBezWitaja 3.py  talkerBezWitaja.py  talkerWitaj.py  wysylanieDzwiekiWit.py
catkin_ws/src/learning_tf/nodes/: talker.py  turtle_tf_broadcaster.py
